--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=DM+Serif+Display&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="root"></div>
